--- a/syntaxes/just.tmLanguage.yml
+++ b/syntaxes/just.tmLanguage.yml
@@ -147,7 +147,7 @@ repository:
       - name: constant.language.const.just
         match: |
           (?x) \b(
-            HEX|HEXLOWER|HEXUPPER|CLEAR|NORMAL|BOLD|ITALIC|UNDERLINE|INVERT|HIDE|
+            HEX|HEXLOWER|HEXUPPER|PATH_SEP|PATH_VAR_SEP|CLEAR|NORMAL|BOLD|ITALIC|UNDERLINE|INVERT|HIDE|
             STRIKETHROUGH|BLACK|RED|GREEN|YELLOW|BLUE|MAGENTA|CYAN|WHITE|BG_BLACK|
             BG_RED|BG_GREEN|BG_YELLOW|BG_BLUE|BG_MAGENTA|BG_CYAN|BG_WHITE
           )\b
